# sct

./: CHANGES  HISTORY  Makefile.am  Makefile.in  NOTES  PackageInfo.g  configure  configure.ac  init.g  makedoc.g  read.g
bench/: ladybank00.cs.st-andrews.ac.uk_1355378979_4704.g  ladybank00.cs.st-andrews.ac.uk_1355385136_4682.g  ladybank00.cs.st-andrews.ac.uk_1355446981_11792.g  ladybank00.cs.st-andrews.ac.uk_1355450779_11792.g  ladybank00.cs.st-andrews.ac.uk_1355780562_24784.g  ladybank00.cs.st-andrews.ac.uk_1355784265_24777.g  ladybank00.cs.st-andrews.ac.uk_1355788002_24792.g  ladybank01.cs.st-andrews.ac.uk_1355408435_7656.g  ladybank01.cs.st-andrews.ac.uk_1355411835_7803.g  ladybank01.cs.st-andrews.ac.uk_1355415123_7682.g  ladybank01.cs.st-andrews.ac.uk_1355415938_7829.g  ladybank01.cs.st-andrews.ac.uk_1355443358_16540.g  ladybank01.cs.st-andrews.ac.uk_1355443484_16540.g  ladybank01.cs.st-andrews.ac.uk_1355443680_16540.g  ladybank01.cs.st-andrews.ac.uk_1355443933_16540.g  ladybank01.cs.st-andrews.ac.uk_1355443994_16528.g  ladybank01.cs.st-andrews.ac.uk_1355444162_16540.g  ladybank01.cs.st-andrews.ac.uk_1355444434_16540.g  ladybank01.cs.st-andrews.ac.uk_1355444687_16519.g  ladybank01.cs.st-andrews.ac.uk_1355444770_16540.g  ladybank01.cs.st-andrews.ac.uk_1355444838_16528.g  ladybank01.cs.st-andrews.ac.uk_1355444987_16510.g  ladybank01.cs.st-andrews.ac.uk_1355445156_16540.g  ladybank01.cs.st-andrews.ac.uk_1355445444_16540.g  ladybank01.cs.st-andrews.ac.uk_1355445513_16501.g  ladybank01.cs.st-andrews.ac.uk_1355445581_16491.g  ladybank01.cs.st-andrews.ac.uk_1355445958_16540.g  ladybank01.cs.st-andrews.ac.uk_1355445968_16528.g  ladybank01.cs.st-andrews.ac.uk_1355446185_16519.g  ladybank01.cs.st-andrews.ac.uk_1355446348_16483.g  ladybank01.cs.st-andrews.ac.uk_1355446457_16473.g  (+197 more)
doc/: examples.xml  install.xml  (+2 more)
(+41 files in other folders)
